@startuml
class Cadena {
    - String nombre
    - ArrayList<Programa> listaProgramas

    + Cadena(String nombre)
    + String getNombre()
    + void setNombre(String nombre)
    + ArrayList<Programa> getListaProgramas()
    + void agregarPrograma(Programa programa)
    + String toString()
}

class Programa {
    - String nombre
    - Cadena cadena
    - int temporadas
    - ArrayList<Empleado> listaEmpleados
    - ArrayList<Invitado> listaInvitados
    - Empleado director

    + Programa(String nombre, Cadena cadena)
    + String getNombre()
    + void setNombre(String nombre)
    + Cadena getCadena()
    + void setCadena(Cadena cadena)
    + int getTemporadas()
    + void setTemporadas(int temporadas)
    + ArrayList<Empleado> getListaEmpleados()
    + ArrayList<Invitado> getListaInvitados()
    + Empleado getDirector()
    + void setDirector(Empleado director)
    + void agregarInvitado(String nombre, String profesion, int temporada)
    + void agregarEmpleado(String nombre, String cargo)
    + void invitadosTemporada(int temporada)
    + int vecesInvitado(String nombre)
    + void rastrearInvitado(String nombre)
    + String toString()
}

class Empleado {
    + static final String ID_EMPLEADO
    + static int numeroEmpleados
    + static String[] listaCargos

    - String id
    - String nombre
    - String cargo
    - Empleado director

    + Empleado(String nombre, String cargo)
    + String getCargo()
    + void setCargo(String cargo)
    + Empleado getDirector()
    + void setDirector(Empleado director)
    + String getNombre()
    + void setNombre(String nombre)
    + String getId()
    + void setId()
    + String toString()
}

class Invitado {
    - LocalDate fechaActual
    - String nombre
    - String profesion
    - LocalDate fecha_visita
    - int temporada

    + Invitado(String nombre, String profesion, int temporada)
    + String getNombre()
    + void setNombre(String nombre)
    + String getProfesión()
    + void setProfesión(String profesion)
    + LocalDate getFecha_visita()
    + void setFecha_visita()
    + int getTemporada()
    + void setTemporada(int temporada)
    + String toString()
}

' Relaciones corregidas:
Cadena "1" o-- "*" Programa : listaProgramas
Programa "1" o-- "1" Cadena : pertenece a
Programa "1" -- "*" Empleado : listaEmpleados
Programa "1" -- "*" Invitado : listaInvitados
Programa "1" -- "1" Empleado : director
Empleado "1" --> "1" Empleado : dirige a

@enduml